# Map2616

./: .gitignore  CMakeLists.txt  netlify.toml  readme.md
frontend/: index.html  script.js  style.css
frontend/client/public/wasm/: main.js  main.wasm
frontend/client/src/: App.css  App.jsx
include/: CPU.h  alu.h  assembler.h  controlflow.h  decoder.h  errors.h  isa.h  memory.h  microprocessor.h  registers.h
scripts/: netlify-build.sh
src/: alu.c  assembler.c  controlflow.c  decoder.c  main.c  memory.c  microprocessor.c
